--- a/voda.tex
+++ b/voda.tex
@@ -1814,4 +1814,67 @@ Jedeme jenom s Kubou, vody je minimum, ale jet se to dá. První část, kde je 
 
 Odpoledne se dáváme na odjezd, jedeme až k Malmö před most, kde přespíme do rána. Trajekty z Trelleborgu sou buď plný nebo drahý, takže nakonec volíme levnější a jednodušší variantu - jedeme přes most do Dánska a trajektem Gedser - Rostock. Celkově je to na jeden lístek a stojí to 165 Eur. Trajekt máme na 13:00, stíháme i ten dřívější v 11:00, ale na ten už se bohužel nevejdem, takže aktuálně čekáme a pak už nás čeká jenom 7 hodin do Prahy.
 
+
+\akce{Tirolsko}
+\datum[28.7. - 31.7.]
+
+Chci vyrazit na víkend, ale jedinej kdo jede pádlovat je Ondra s Matesem na 4 dny, tak se na poslední chvíli přidávám. Ondra to v den odjezdu odřekne, tak nakonec jedeme jenom s Matesem a Lindou s tím, že se na místě možná připojí Víťa. Ve čtvrtek večer vyrážíme na Kopáč.
+
+
+\info[Koppentraun]{28.7.}{$135 cm$ }
+\usek{Klasika}
+
+Ráno jedeme Kopáč, má to docela slušnou vodu, takže pohodová jízda. Pendluju vlakem, ale neni v něm žádnej průvodčí ani automat na jízdenky, tak jedu zadarmo. Na odpoledne přejíždíme směr Isel
+
+\info[Tauernbach]{28.7.}{$175 cm$ }
+\usek{Standard}
+
+Cestou je najblíž Tauernbac, tak dáváme ten. Má docela pěknou vodu, takže je to vcelku dobrá zábava. Mates přenáší esíčko, jinak jedem všechno na pohodu. Na vysedačce akorát potkáme Víťu jak dorazil, tak už pendlujeme s nim.
+
+\info[Isel]{29.7.}{$275 cm$ }
+\usek{Katarakt}
+
+Spíme pod kataraktem a ráno se na něj dem kouknout. Klukům se moc nechce a nasedaj v půlce, já to dávám celý. Od posledně se to trochu změnilo a lajna přes největší válec neni tak čistá, takže se musí buď na komoru a nebo hodně doprava přes vracák - což je moje lajna. Spodní část pak už jedu traverz na pravej střed a pak už klasicky dolu všechno s vodou, na pohodu
+
+Dáváme ještě druhou jízdu, ale nasedáme už jenom v půlce kataraktu, ať to zbytečně nehrotíme.
+
+
+\info[Defereggenbach]{29.7.}{$55cm$ }
+\usek{Wasserfallstrecke}
+
+Na odpoledne dáváme Defe, Víťa to jede po prví, tak trochu víc prohlížíme, ale je to pohodička, pěkná voda. Ale přece jen po Norsku je to dost s prstem v nose :)
+
+\cara
+Večer spíme přímo na nasedačce nad mostem na pravym břehu, docela hezký místo. Ráno vyrážíme rovnou do Itálie, tak to máme kousek.
+
+
+\info[Reinbach]{30.7.}{nižší střední voda }
+\usek{Vodopády}
+
+Je docela málo vody, tak mě to zas tolik neláká, ale Matesovi se chce jet, tak to dáváme. Jedu první, mám docela přijatelnou lajnu, jenom bych se moh na tom velkym dropu zabalit trochu líp, ale pohodička. Mates jede druhej, drop trochu přiboofne a rozbije si nos o límes, ale naštěstí taky nic dramatickýho, za 2 dny už to má v pohodě.
+
+
+\info[Ahrnbach]{30.7.}{$31 m^3/s$}
+\usek{Schloss}
+
+Odpoledne dáváme $2\times$ Schloss za nižší vody, klasika... Pak si dáme nějaký pivko ve městě a jedeme zpátky na Isel.
+
+
+\info[Isel]{30.7.}{$290cm$ Lienz}
+\usek{Pod kataraktem}
+
+Večer za šera si dáváme ještě spodní Isel za už docela pěkný vody. Linda si s náma dává závod, takže jedeme docela v tempu bez vracáků. Je to super, z pod kataraktu na plážičku jedeme 17min a Linda nemá šanci, dobíhá až tak 3-5 min po nás :)
+
+
+\info[Brandenberger Ache]{31.7.}{$60cm$}
+\usek{Kaiserklamm až Tiefenbachklamm}
+
+Ráno koukáme, že má docela dobrou vodu Brandy, tak se rozhodnem tam přejet. Víťa už pádlovat kvůli ramenu nechce, ale jede s náma a přependluje nám, což je super. Brandy je super, všechno je standardní, žádnej problém. Paprsek neseme, mě se do něj vůbec nechce, Mates to zkoumá, ale nakonec to taky nese.
+
+\cara
+Pak už jenom razíme přes Budějce do Prahy a před půlnocí sem doma. Celkově super povedenej zájezd, Isel nikdy nezklame.
+
+
+
+
 \end{document}.
