--- a/voda.tex
+++ b/voda.tex
@@ -1443,7 +1443,7 @@ Večer jedem do Jablonce, kde spíme s Kubou u Vojty, což je bomba.
 
 Ráno začínáme v klidu na Kamendě, Vojta bere Míšu na topo duo, takže si jedeme pohodovou jízdu, jez neseme. Dole akorát stíháme rychlík, dokonce nás berou i stim obřím topíčkem, takže pohoda. Dáváme oběd a přejíždíme na Mejto.
 
-\info[Kamenice]{1.4.}{$13m^3/s$}
+\info[Jizera]{1.4.}{$13m^3/s$}
 \usek{Od železničáku}
 
 Ještě je brzo, tak si to s Kubou vynášíme po pravym břehu kousek nad železničák a dáváme si na pohodu horní Jizeru. Moc vody neni, ale dá se to jet. Všechno je v pohodě, akorát Cutisin jedu jak debil, míjim levej boof a padám tak tak podivně bokem... Naštěstí za týhle vody je to dost jedno. Jedeme to za 40 minut.
@@ -1464,7 +1464,7 @@ Spíme na Mejtě spolu se Slávošem, Danem a Kozáčem a dáváme decentní pá
 \info[Mumlava]{2.4.}{$7.5m^3/s$}
 \usek{Klasika}
 
-Kuba potřebuje bejt v Praze dřív, takže v neděli dopoledne už jedeme "jenom" Mumlavu. Dáváme 3 runy kolem 8mi kubíků, všechny jedeme jez, takže už mám docela i pocit, že ho umim najet na správnym místě  a nad hranou nejsem moc nervózní. Jinak je to bomba, Mumlava je prostě supr závaná. Poslední jízdu jedem pod ostrov do zatáčky a frčíme domu. Shodujem se, že i když sme nejezdili žádný velký hrůzy, tak to byl fakt bombovej víkend. Kéž by ty Jizerky tekly častějc....
+Kuba potřebuje bejt v Praze dřív, takže v neděli dopoledne už jedeme "jenom" Mumlavu. Dáváme 3 runy kolem 8mi kubíků, všechny jedeme jez, takže už mám docela i pocit, že ho umim najet na správnym místě  a nad hranou nejsem moc nervózní. Jinak je to bomba, Mumlava je prostě supr zábavná. Poslední jízdu jedem pod ostrov do zatáčky a frčíme domu. Shodujem se, že i když sme nejezdili žádný velký hrůzy, tak to byl fakt bombovej víkend. Kéž by ty Jizerky tekly častějc....
 
 \akce{SKG}
 \datum[14-16.4.]
@@ -1873,6 +1873,82 @@ Ráno koukáme, že má docela dobrou vodu Brandy, tak se rozhodnem tam přejet.
 
 \cara
 Pak už jenom razíme přes Budějce do Prahy a před půlnocí sem doma. Celkově super povedenej zájezd, Isel nikdy nezklame.
+
+
+\akce{Čerťáky}
+\datum[26.8. - 27.8.]
+
+\info[Vltava]{28.7.}{asi $22m^3/s$ }
+\usek{Čerťáky}
+
+Pouští víc vody než obvykle, takže je to super. Nějak se mi nechce nosit škvíru, tak sem jí začal jezdit a překvapivě je to lehčí než sem si myslel. Za týhle vody je to fakt hodně za darmo. V sobotu dáváme na pohodu 4 jízdy.
+
+\info[Vltava]{29.7.}{asi $22m^3/s$ }
+\usek{Čerťáky}
+
+V neděli dopoledne dáváme 3 jízdy a mizíme domu.
+
+
+\akce{Podzimní Ötz}
+\datum[28.9. - 1.10.]
+
+Jedeme na svátky s Kubou, Vojtou a Matesem. Cíl Ötz. Vyjíždíme večer z Prahy, spíme v GaPa a dopoledne dorážíme na Mezimostí.
+
+
+\info[Otz]{28.9.}{$184cm$ Tumpen }
+\usek{Mezimostí}
+
+Na rozjetí dáváme 2 jízdy na mezimostí. Voda je přijatelná, eště to neni úplně jebka. Vzhledem k tomu, že jsem měsíc skoro nepádloval, tak to na rozjetí docela stačí.
+
+\info[Venter Ache]{28.9.}{$62cm$ Vent }
+\usek{Spodní}
+
+Večer už se nám nechce pouštět do Heiligu, tak dáváme jenom spodní Venter. Vody je docela dost málo, ale sjet se to dá.
+
+\cara
+
+Spíme na mezimostí, společně asi s dalšíma 20ti lidma z Čech...
+
+\info[Venter Ache]{29.9.}{$61cm$ Vent }
+\usek{Heilig}
+
+Ráno jedeme na Heilig. Jel to z nás jenom Vojta, ale vody neni moc, takže to neni žádný drama. Začátek až ke vstupence tečer relativně z kopce, ale všechno se dá prohlížet z lodi a víceméně se jede všechno s vodou. Vstupenka den před tim potrápila Slávoše s Mejlou a se Snížákem, kde prej všichni dali dole čelo. Nám se ale nic takovýho nepovedlo, i když boofy to nebyly ideální. Jeli sme to vpravo na levej boof, jestli je někde šutr, tak asi spíš někde vlevo. Všechno až k přenášce jedeme na oči. Před ní se dá zastavit poměrně v pohodě vlevo, přenáší se v pravo. Nějakej cizí týpek to na oči nasype do prava a dole se objeví s hlavou nahoře, takže to asi nějak jet de, ale velkej smysl to nemá. Pod přenáškou jedeme zas všechno na oči, je to takovej boulder garden, asi to nemá smysl moc popisovat, když se to stejně každou chvíli mění... Celý to jedeme asi hodinu a čtvrt. Pocitově by to chtělo spíš víc vody, je to takovej nižší stav.
+
+
+\info[Otz]{29.9.}{$184cm$ Tumpen }
+\usek{Mezimostí}
+
+Odpoledne dáváme $2\times$ mezimostí, druhou jízdu jedu s Matesem a Mejlou, zbytek se šetří na odpolední Wellerbrücke, na který se eště ten den moc necejtim.
+\cara
+Nakonec Wellerbrücke jedou jenom Vojta s Matesem, jedou to celý, ale Mates většinu nad mostem nese. Pak si dávaj pár koleček dole, my s Kubou děláme média. Večer opět spíme na mezimostí.
+
+
+\info[Otz]{30.9.}{$184cm$ Tumpen }
+\usek{Mezimostí}
+
+Ráno dáváme na rozjetí mezimostí. Je super počasí, ale Vojtovi se nechce, tak nám aspoň převáží auto. Přidává se k nám eště Karel a Pepák, aby nejeli jenom sami dva.
+
+\info[Otz]{30.9.}{$184cm$ Tumpen }
+\usek{Wellerbrücke}
+
+Na odpoledne přejíždíme na tyršovku. Kuba je nastydlej, takže se ujímá médií a s Vojtou a s Matesem jedeme od spodku Achstürze. Nasedáme nad čistym asi 2m dropem s pěknym boofem. Pod tim je to v pohodě, takový poklidný rozpádlování před spodkem. Prvení peřej kolem velkýho balvanu zprava jedeme na oči, jsou tam asi dva válečky, ale všechno v pohodě. Potom přistáváme v pravo a prohlížíme to v podstatě až k mostu. první peřej se najíždí zleva boofem přes šutr a pak hned následuje další boof vlevo kolem šutru. Asi za 20 m nádleuje boof, kde se jede po desce co nejdál a pak boof do prava, aby se netrefily šutry na dopadu. Pod tim je vracák, z něho se jede vlevo boofem vpravo přes šutr, pak si to chce najet trochu na střed a následující, největší drop, se jede levej střed - je tam docela dobrej kicker, když se trefí. Válce hned pod tim jsou trochu tricky - teda hlavně kvůli tomu, co je pod tim. Vybíráme jednodušší lajnu první válec do prava, kap v pravo průzkokem mezi štutrama a pak buď levej válec skučit za roh do prava nebo se dá i úplně do prava. Pak už jenom stačí zvládnout traverz zprava doleva do velkýho vracáku. Vojta si to $2\times$ vynáší a nakonec jede i klasickou lajnu přes válce a docela to dává.
+
+Pak to neseme pod most, jási dáváme jenom dva runy, mám toho docela dost. Při prvnim svícuju v TNT, zvedám a mínus jedničku jedu pozadu, takže dobrá show. Druhou jízdu už dávám TNT na pohodu, ale zase trochu svícuju v Champions killerovi, tak na to kašlu. Kluci pak jdou eště pár jízd.
+
+\cara
+
+Večer přejíždíme na Lofer, aby byla trochu nějaká změna. Je tam asi 25 kubíků, takže to bude takový pohodový vypádlování.
+
+
+\info[Saalach]{1.10.}{$51cm$ Unterjettenberg}
+\usek{Lofer}
+
+Přes noc ale prší, tak Lofer vystoupá na pěknejch 43 kubíků. Dáváme 2 jízdy, jedeme i trojkombo, první jízdu ho prohlžíme. Je to deocela velký, ale všechno jedeme na pohodu. Trochu pusy je esíčku, kde první jízdu skončim moc v pravo ve válci za esíčkem a musim tam zvedat, ale naštěstí v pohodě. Druhou jízdu mi luxusně vychází lajna přes trojkombo, jinak všechno jedem na pohodu.
+
+\cara
+
+Koukáme ještě na Unkáč, ale ten je úplně suchej. Vodu by měl Schwarzabach, ale už je docela pozdě, tak se do něj nepouštíme a jedeme se jenom podívat na vyvěračku Schwarzabchu ze skály - docela zajímavá záležitost. Pak už jenom frčíme do Prahy.
+
 
 
 
