--- a/voda.tex
+++ b/voda.tex
@@ -1950,6 +1950,39 @@ Přes noc ale prší, tak Lofer vystoupá na pěknejch 43 kubíků. Dáváme 2 j
 Koukáme ještě na Unkáč, ale ten je úplně suchej. Vodu by měl Schwarzabach, ale už je docela pozdě, tak se do něj nepouštíme a jedeme se jenom podívat na vyvěračku Schwarzabchu ze skály - docela zajímavá záležitost. Pak už jenom frčíme do Prahy.
 
 
+\akce{Podzimní SKG}
+\datum[21.10. - 22.10.]
+
+Se Štěpánem vyrážíme na podzimní SKG s tím, že se připojíme k partě s Kotva / Jablonec. Nakonec se s nima potkáme až v sobotu na párty, ale ani to nevadí. Vyrážíme v sobotu ráno z ČB.
+
+\info[Saalach]{21.10.}{$25cm$ Unterjettenberg}
+\usek{Lofer}
+
+Dáváme se Štěpou 5 jízd na Loferu, všude je tu hromada vodáků, takže pendly nejsou problém. Vody je málo, ale je to na pohodu. První jízdu nějak podcenim chycení vracáku pod esíčkem vpravo, namáčkkne mě to na/pod skálu vpravo a docela musim bojovat, abych se tam odtud dostal (asi 8 pokusů o eskymák a možná 20-30sec). Klasický podcenění jednoduchý vody.... Naštěstí z toho odjedu, i když už sem chvílema o kryse přemejšlel, ale to člověk na Loferu nechce nikdy... Zbylý jízdy už sou v klidu. Spíme na štěrkovně.
+
+\info[Saalach]{22.10.}{$25cm$ Unterjettenberg}
+\usek{Lofer}
+
+Ráno zvažujeme Gesäuse, ale nakonec se nám nechce nikam jezdit, tak dáváme dvakrát Lofer s klukama a jedeme domu.
+
+\rok{2018}
+
+\akce{Novoroční Kamenda}
+\datum[1.1.]
+
+\info[Kamenice]{1.1.}{8 $m^3/s$}
+\usek{Klasika}
+
+Zuzka mě přemluví na prvního na Kamendu, vstávání je trochu peklo, ale dávám to. Dáváme jednu jízdu, vemou nás do vlaku s loděma, takže pohoda... Dokonce tam ani nejsme sami, na nasedačce potkáváme Vojtu s Matesem.
+
+
+\akce{Wolfovka}
+\datum[6.1.]
+
+\info[Wolfsteiner Ohe]{6.1.}{?? $m^3/s$}
+\usek{Klasika}
+
+Wolfi má docela pěknou vodu, je docela teplo a Šumava taje. Jedeme na jeden den z Prahy s Kubou a Vojtou. Je trochu míň vody než minule, ale pořád je to dost solidní stav. První část jedeme poměrně rychle a na pohodu, druhou část pak prohlížíme, nikdo si to moc nepamatujeme. Při prohlížení máme ještě zábavu s taháním Víti z pod větve, naštěstí vylez celkem v pohodě, ale loď mu uplavala a nepřežila to. Naše jízda neni o moc lepší, Kuba v půlce plave, loď se naštěstí hned zasekne v řece, ale Kuba  je na pravym břehu a musí to dost obcházet. My s Vojtou mezitim vyprošťujeme loď, Vojta k ní doplave do půlky řeky, já šašim na břehu... Nakonec jí nějak nacvaknem a dostanem na břeh. My pak s Vojtou v pohodě dojížddíme, Kuba už dochází pěšky...
 
 
 
