--- a/voda.tex
+++ b/voda.tex
@@ -2117,4 +2117,103 @@ Ráno je výrazně míň vody. Mě hodně rozbolelo zápěstí, měl sem ho troc
 Mates si dá ještě odpoledne střední Verzascu a rozhodnem se jet domu. Cestou ještě prohlížíme Buchenegger vodopád. Je docela pěknej, ale má relativně málo vody a hlavně od auta se k němu de snad 150 vejškovejch metrů dolu a pak by se šlo zas zpátky, což by byla záležitost se všim všudy na půl dne. Takže to nedáváme a jedem domu, do prahy dorazíme někdy ve 2 ráno...
 
 
+\akce{Piemáč a Tessin}
+\datum[26.5. - 3.7.]
+
+Se Štěpánem a Michalem vyrážíme do Piemáče. Termín je dost pozdní, ale je tam letos mrtě sněhu, tak sme doufali, že to bude OK. Nakonec to bylo tak OK, že ve Val Sesia se dalo jezdit jenom jeden den, všechny ostatní bylo všechno brutálně nakoupený... Na kopcích byl ještě sníh a každou noc pršely, někdy fakt pekelný bouřky, takže nálož vody všude...  V pátek odpoledne jedeme na klasický spaní u Moesy, dorážíme v pohodě někdy kolem půlnoci... Ráno dávaj kluci na rozjetí Moesu, já mám už pár tejdnů bídnější zápěstí, takže vynechávám a jenom pendluju. Je nějakej 40 kubíků, takže stejně žádná hitparáda.
+
+\info[Verzasca]{26.5.}{16 $m^3/s$}
+\usek{Střední + Spodní}
+
+Začínáme na Verzasce, neni žádná velká voda, ale vcelku se dá i ta střední... Štěpán plave na ježíši a jede jenom pod vodopád, my s Michalem pokračujeme až dolu. Neseme jenom klasicky $2\times$, za týhle vody je to pohoda.
+
+\info[Ribo]{26.5.}{Vyšší střední}
+\usek{Od vodopádu}
+
+Nakonec dáváme večer ještě Ribo. Nejsme si jistý, kolik tam bude ráno vody, tak asi v 7 nasedáme na spodek. Michal dává vodopád, já nasedám dole. Dává to na pohodu, máme takovou hezkou vyšší střední vodu. Jedeme rychle, s jednim prohlíženim jsme za 25 minut dole.
+
+
+\info[Ribo]{27.5.}{Nižší}
+\usek{Střední}
+
+Ráno máme nízkou vodu, tak nasedáme nad Vergelettem. Vody je dost málo, ale nikdo to neznáme, tak nám to ani tolik nevadí. Jedeme s Michalem, Štěpán se připojí u vodopádu. Nejhorší je ten vstupní dropík, na kterej je fakt asi dost málo vody. Jedu první, ale sem trošku brzo trochu moc vpravo a od skály mě to odhodí, než stihnu dát boof. Takže pádlem trochu ohobluju pravou stěnu, ale dole to nějak vyzvedám. Michal to jede úplně vpravo, ale taky ho to trochu zašlape a musí zvedat. Potom už je to pohoda, následující peřej je fakt luxusní. Dál jsou to takový různý dropíky a úzký průjezdy, všechno se to dá prohlížet (a taky prohlížíme). Jedno místo neseme, je to plný stromů a syflů a žádná lajna tam neni. Jinak jedem všechno, jedno místo celý prozvedám, protože mi to vyrazí pádlo, ale jinak celkem v pohodě. Za týhle vody to neni nijak extra těžký. Akorát je to poměrně zavřený v kaňonu, takže by se případně nedalo utect (rozhodně ne jednoduše). Vodopád přenášíme a pak už na pohodu dojíždíme dolu.
+
+
+\info[San Giovanni]{27.5.}{Suchý}
+\usek{Vodopády}
+
+Jedeme do Piemáče, cestou se stavujem na San Giovanni. Vody je megamálo, ale stejně to $3\times$ jedeme, nic jinýho už bysme stejně nestihli. Aspoň si dáme nějaký freewheely a natočíme pár blbostí.
+\cara
+Spíme u Sesie ve Scopě.
+
+
+\info[Sesia]{28.5.}{142cm Campertogno}
+\usek{Z Balmuccie do Varalla}
+
+V noci je mega bouřka a ráno je Sesia brutálně nakoupená. Jedeme s Michalem jenom spodek, v little Canadě se trochu i bojim, ale nakonec tam vůbec nic neni. Dole je pár slušnejch válců, ve kterejch by člověk rotoval asi na vždy, ale zvládáme se jim vyhnout. Jinak je to fakt velký, ale docela přehledný.
+
+\info[Mastallone]{28.5.}{83cm}
+\usek{Spodní}
+
+Vzhledem ke stavům jedeme Mastallone, má pěknou vyšší stření vodu. Vstupenku do kaňonu neseme, jinak všechno v pohodě. Neseme i poslední peřej před Varallem, ale asi by šla. /plně poslední dropík za touhle peřejí je trochu tricky, vlevo je velkej válec a dá se to objet hodně doprava, s Michalem to jedeme.
+\cara
+Jedeme se podívat na Sorbu, ale ta je úplně mimo. Egua a Sermezino jsou taky úplně nesmyslně nakoupený. Spíme zas ve Scopě.
+
+\info[Mastallone]{29.5.}{102cm}
+\usek{horní}
+
+V noci znovu prší, vody je stejně nebo víc. Jedeme zas na Mastallone, s Michalem zkoušíme horní úsek. Nasedáme ve vesnici cca 2km na soutokem s Landwasserem. Tenhle úsek je taky nejtěžší, je to kontinuální 4+, hodně podobná jako třeba Skjoli :) Nejtěžší místo ale prohlížíme z auta po cestě nahoru, takže z vody prohlížíme jenom jednou a zbytek jedeme na oči. Po soutoku je to všechno o půl stupně těžší a už to neni tolik kontinuální. Nejtěžší místo je až na konci před mostem ve vesnici, je  dobrý si to prohlídnout.
+\cara
+Kluci pak pokračujou dál až do Varalla, já šetřim zápěstí a tenhle úsek pendluju a točim. Odpoledne se jdeme podívat podél horní Sorby. Moc toho z řeky není vidět, ale ten spád je mega přísnej. Ale je to ukrutně nakoupený, tak se nedá moc dobře zhodnotit, jestli je to reálný. Večer je větší párty, co ž se ukazuje jako chyba, protože neprší a další den je jedinej, kdy se dá ve Val Sesia rozumně pádlovat.
+
+
+\info[Gronda + Sorba]{30.5.}{střední}
+\usek{Klasika}
+
+Ráno nejsme úplně svěží, tak volíme jednodušší variantu - Grondu a Sorbu. Štpán jede jenom pod slajdy, my pak s Michalem pokračujeme až dolu. Všechno jedem na pohodu, Sorbu dáváme ani ne za hodinku.
+
+
+\info[Sesia]{30.5.}{110cm}
+\usek{Alpine sprint}
+
+Potom dáváme horní Sesii, je vcelku pěkná voda, tak jedeme jenom s  Michalem. Nejtěžší úsek prohlížíme, jinak jedeme všechno. Pěkný popádlování na 45 min.
+\cara
+Kluci pak jedou Sesii z Balmuccie, aby si Štěpán trochu západloval. Ještě zvažujeme Eguu, ale z toho údolí jdou už zase bouřky, takže to vzdáváme. Nakonec je to dobře, přijeli bysme tam akorát do pekelný bouřky... Místo toho jedeme spát pod střechu u kostela nad Varallem.
+
+Ráno už je zase všude nakoupeno, tak se jedeme podívat na Ayasse, kde je podle aplikace dobrá voda na horní úsek. Je to ale blbost, je to brutálně nakoupený. Tak si to aspoň prohlídneme, koukem i na vodopády (ty sou samozřejmě taky nesmyslný) a nakonec se rozhodujeme jet zpátky na Stronu.
+
+
+\info[Strona]{31.5.}{110cm Gravellona}
+\usek{Horní}
+
+S MIchalem jedeme Stronu, nasedáme cca 2 km na vodopádem ve vesnici u mostu. Vody je celkem dost, taková střední, možná trochu vyšší střední. Neznáme to, takže jedeme na pohodu. Nad vodopádem je to v pohodě, prohlížíme snad jednou, zbytek většinou prohlížíme jen z lodi. Vodopád je luxusní, najíždíme z levýho vracáku, traverzem úplně doprava  a pak už jenom luxusní boof. Další cca kilometr je v pohodě, pak začínaj být peřeje hodně zablokovaný. Ze začátku prohlížíme třeba $40\%$ peřejí a zbytek z lodi, ke konci už prohlížíme skoro všechno. Těch peřejí je třeba 30 - 40, takže je to trochu psycho pořád vysedat a prohlížet, ke konci už toho máme docela dost a už to i docela kurvíme. Rozhodně to nechce jezdit horizonty na slepo, což sem si na vlastní kůži ověžil u jednoho ,kterej vypadal jako čistej boof, ale nakonec to dopadlo krysou... Ke konci už docela pospícháme, nasedali jsme v 5. Nakonec jedeme 3 hodiny, vysedáme u jezu a lezeme přes elektrárnu, což neni úplně optimální. Mnohem lepší by bylo jez sjet a kus pod nim vpravo vysednout, je tam pěšinka nahoru.
+\cara
+Spát jedeme na parkoviště u San Bernardina.
+
+
+\info[San Bernardino]{1.6.}{Nízký}
+\usek{Horní}
+
+Ráno jedeme všichni 3 hořejšek. Je málo vody, takže je to celkem na pohodu. Jednu z těch větších peřejí neseme, lajna tak fakt neni. Jinak jedeme celkem v pohodě, s prohlížením asi 2 a půl hoďky.
+
+\info[Melezza]{1.6.}{Vyšší střední}
+\usek{Klasika}
+
+Odpoledne jedeme s Michalem Melezzu. Máme super vodu, takovou vyšší střední. Za tohodle stavu je to fakt zábavný. Přenáška je v pohodě, akorát dáváme seal launch až pod ten druhý drop, nasedat těsně nad sifonem se nám nechce. Must run je taky v pohodě, i když ho nejedeme optimálně. Dál pár peřejí prohlížíme, ale jinak jedeme většinou na oči. Celkově asi 1:15.
+
+\info[Verzasca]{1.6.}{$18 m^3/s$}
+\usek{Střední + Spodní}
+
+Spíme na Verzasce a další den dáváme klasicky střední a spodní. Máme trochu víc vody než před tejdnem, jedeme zas všechno na pohodu, celý s klasickejma přenáškama jedeme 1:50.
+\cara
+Odpoledne jedeme na Glenner, abysme se nějak přiblížili domu. Michal se Štěpánem si dávaj Vorderrhein, já pendluju.
+
+\info[Glenner]{2.6.}{$18 m^3/s$}
+\usek{Klasika}
+
+Dáváme Glenner s pendlem, já jedu jenom jednou. Pohodička  aodpoledne jedeme domu.
+\cara
+Cestou máme trochu zábavu, když nám teče nafta z motoru, nakonec dojedeme až do Prahy, ale v Tróji už auto nechávám a další den mi to musí odtáhnout do servisu... Ale to už je detail.
+
+
 \end{document}.
