norsko, podzim, resty

--- a/voda.tex
+++ b/voda.tex
@@ -2201,19 +2201,221 @@ Ráno jedeme všichni 3 hořejšek. Je málo vody, takže je to celkem na pohodu
 
 Odpoledne jedeme s Michalem Melezzu. Máme super vodu, takovou vyšší střední. Za tohodle stavu je to fakt zábavný. Přenáška je v pohodě, akorát dáváme seal launch až pod ten druhý drop, nasedat těsně nad sifonem se nám nechce. Must run je taky v pohodě, i když ho nejedeme optimálně. Dál pár peřejí prohlížíme, ale jinak jedeme většinou na oči. Celkově asi 1:15.
 
-\info[Verzasca]{1.6.}{$18 m^3/s$}
+\info[Verzasca]{2.6.}{$18 m^3/s$}
 \usek{Střední + Spodní}
 
 Spíme na Verzasce a další den dáváme klasicky střední a spodní. Máme trochu víc vody než před tejdnem, jedeme zas všechno na pohodu, celý s klasickejma přenáškama jedeme 1:50.
 \cara
 Odpoledne jedeme na Glenner, abysme se nějak přiblížili domu. Michal se Štěpánem si dávaj Vorderrhein, já pendluju.
 
-\info[Glenner]{2.6.}{$18 m^3/s$}
+\info[Glenner]{3.6.}{$18 m^3/s$}
 \usek{Klasika}
 
 Dáváme Glenner s pendlem, já jedu jenom jednou. Pohodička  aodpoledne jedeme domu.
 \cara
 Cestou máme trochu zábavu, když nám teče nafta z motoru, nakonec dojedeme až do Prahy, ale v Tróji už auto nechávám a další den mi to musí odtáhnout do servisu... Ale to už je detail.
+
+
+\akce{Norsko}
+\datum[22.6. - 8.7.]
+
+S ježíšema do Norska. Půjčujem velkou dodávku a jedeme na dva tejdny popádlovat na suchý jebky. Sepisuju to po půl roce, takže to možná nebude úplně sedět.
+
+\info[Numedalslagen]{24.6.}{$34 m^3/s$}
+\usek{Dagali}
+
+Suchá jebka. Mejla udělal díru do úplně nový waky a půjčuje si Voryho ředitele.
+\cara
+Jedeme do Vossu., spíme u jezera 60.614046, 6.408874 (asi). Docela pokalíme, takže  druhej den toho moc nenajezdíme :)
+
+\info[Raundalselvi]{25.6.}{$27 m^3/s$}
+\usek{Play run}
+
+Jedeme jenom suchej play run, drop pod church dropem nejdeme, protože vypadá dost suchej. Jinak pohoda.
+
+\info[Raundalselvi]{26.6.}{$27 m^3/s$}
+\usek{Train station}
+
+Jedeme to poprví, takže docela pomalu. Většinou prohlížíme, ale za tohodle stavu je to všechno docela v pohodě. Must run jedeme chicken lajnou vpravo, je to dost jebka, ale v pohodě. Pak až do přenášky jedem tak napůl na oči, na půl prohlížíme. Přenáška vpravo je docela v pohodě, za týhle vody by to asi šlo i z části vyslat, ale nic z toho nejdeme. Ze zbytku je jedinej tricky poslední kaňonek, kde je budddys hole. Prohlížíme ze shora, ale ten největší válec není moc dobře vidět. Já ho vyšlu na střed a trochu si v něm podribluju, ale trochu se štěstím z toho po pár zvedání vyjedu. Dál už je to pohoda. Před Morning Glory potkámáve Vikiho, ten nám to nasmahne, tak jedem za nim. Za týhle vody je to dost v pohodě, první válec projedem jak nic a ten druhej se dá vlevov klidu objet. Jedeme pod Churc drop.
+
+\info[Raundalselvi]{27.6.}{$24 m^3/s$}
+\usek{Train station}
+
+Jedeme po druhý, je znatelně míň vody a je to už úplně v pohodě.
+
+\cara
+
+Přejíždíme na Sogndal a spíme na parkovišti u jezera 61.3326992N, 6.9254033E.
+
+\info[Sogndal]{28.6.}{$9.5 m^3/s$}
+\usek{Horní + Spodní}
+
+Máme výrazně míň vody než loni, je to trochu jebka, ale de to jet v pohodě. Na hořejšku jedeme všechno, všechno je to v pohodě. Spodek je popravdě až k vodopádům dost jebka, ostrý šutry a divný peřeje, jednou tam dávám dost čelo. Vodopády vypadaj dobře, je nás tam asi 10 včetně skupinky Norů s Beňou, ale nikomu se do toho moc nechce. Já bych jel, ale nemám s kym, tak to neseme. Přenáška je to dost na hovno. Na zbytku je jedna přenáška a pár hezkejch peřejí, ale když se nejedou vodopády, tak to imho za to nestojí. Nicméně na ten spodek je tohle dobrá střední voda. Vysedáme u jezu u elektrárny. Slajd by šel jet, ale nikomu už se dál nechce.
+
+\cara
+Jedeme na Jostru, spíme v kemu u Jezera na nesdačce.
+
+\info[Jolstra]{29.6.}{$35 m^3/s$}
+\usek{Raftovej}
+
+Je docela málo vody, ale jet to de v pohodě, zábavá WW3-4. Sneslo by to výrazně víc, ale pak už by to asi nebylo zas tak zadarmo.
+
+\cara
+
+Zvažujeme jestli jet na Valldolu (spodní limit) nebo Bygdelvu (dost zajížďka), ale nakonec se rozhodujem pro Ottu. 
+
+\info[Otta]{29.6.}{málo}
+\usek{nad Pollfossem}
+
+S Mejlou jedeme ještě večer Ottu, má to málo, ale všechno de jet a aspoň trochu pádlujem.
+
+\cara
+Zbylý poznámky dopisuju skoro po roce, takž už asi nebudou úplně autentický :(
+
+\info[Otta]{30.6.}{málo}
+\usek{Horní úsek mezi jezery až k Pollfossu}
+
+Jedeme horní úsek, co je vidět cestou ze silnice. Začíná to pěknými pohodovými slajdíky, pak jsou tam 2 docela velký, ale oba jetelný. Pak je tam drop, kterej za týhle vody určitě jet nejde. Zbylý peřeje jsou už o ničem. Pokračujem přes jezero až před Pollfoss. Poslední kilometr je pěknej, ke konci je docela mocná peřej, která z levýho břehu vypadá dost blbě, ale při prohlížení z pravýho to je výrazně lepší. Jedu já a Mejla, celý to má lajnu po pravý straně. Vysedáme na parkovišti vlevo.
+
+
+\info[Tora]{1.7.}{13 $m^3/s$}
+\usek{Spodek, park and huck}
+
+Tora vypadá super, ale je to shit show. Nasedáme nad dropem nad pěší lávkou, horní double drop vypadá přísně. Jedem ve 3 s Mejlou a Tomem. Já první drop dávám v pohodě, ale Tom si na něm udělá něco se zádama a končí. Mejla je moc v pravo a zůstane v unercutu vpravo pod dropem, naštěstí z toho hned vyplave, po chvilce i loď. Ještě Mejlu přemlouvám, že pojedeme dál. Další drop najíždíme ze středu doprava přes 3m boof a pak je potřeba boofnout válec. Já jedu relativně dobrou lajnu, Mejla to dobře naboofne, ale  do válce pod tim spadne pozadu. Chvíli bojuje a dribbluje, ale nakonec vyplave a loď bohužel odplave do další peřeje... Nakonec sice loď ještě odlovíme, ale je totálně rozjebaná, takže Mejla je bez lodi.
+
+Mezitim Toma záda dost bolí, takže mu nakonec voláme sanitku, která ho odveze až do Lilehhameru. My mezitím jedeme podobným směrem na Ostri. Toma ještě večer přivezou zpátky za náma, má sice naprasklej obratel, ale v nemocnici si ho nenechaj a prej tam s náma může zůstat!? Spíme na docela pěknym place 61.912144N, 8.022530E.
+
+
+\info[Ostri]{2.7.}{16 $m^3/s$}
+\usek{klasika, viz Obsommer}
+
+Ostri má nižší vodu, ale neni to vůbec zlý. Pěkná hodně kontinuální 3+ řeka s několika čtyřkovejma místama, dokonce máme i plaváčka. Otáčíme to dvakrát. Je to krátkej úsek, 3km, 20 min na vodě.
+
+\cara
+Spíme na vysedačce, je tu docela dobrej plac, ale taky stádo krav, což je na spaní trochu slabší.
+Ostri
+\info[Ostri]{3.7.}{18 $m^3/s$}
+\usek{klasika, viz Obsommer}
+
+Ráno to otáčíme ještě jednou a jedeme na Skjoli.
+
+\info[Skjoli]{3.7.}{cca 145cm na vodočtu}
+\usek{klasika}
+
+Skjoli má dobrou rozumnou vodu, ale Mejlovi se na půjčenym Raptoru jet nechce, takže jedem s Kůčou jenom ve dvou, což neni zrovna optimální. Naštěstí máme info, že by tam neměly být řádný stromy.  Stav je fakt dobrej, sice si to nepamatuju zdaleka tolik, jak sem si myslel, ale všechny hlavní věci jedeme docela dobře, prohlížíme jenom jedou, jednuz větších peřejí cca uprostřed úseku. Vysedáme u vodočtu, jedeme to asi 50 min. Druhou jízdu Kůča nechce, tak jedem pryč.
+
+Cestou se díváme na Bovru, ale ta má málo, tak jedeme rovnou na Sjou.
+
+\info[Sjoa]{4.7.}{33 $m^3/s$}
+\usek{Ridderspranget + Aseng}
+
+Krom horních 2 přenášek na Riddersprangetu jedeme všechno, i Brurusti má pohodovou vodu a de to docela v klidu jet. Spíme u mostu na placenym plácku.
+
+
+\info[Sjoa]{5.7.}{33 $m^3/s$}
+\usek{Amot}
+
+Jedeme $3\times$.
+
+\info[Sjoa]{6.7.}{36 $m^3/s$}
+\usek{Amot}
+
+Opět jedeme $3\times$, na jednu jízdu si půjčuju Kůčovu fiveku a je to docela zábava :)
+
+\cara
+
+Přes Dagali jedeme domu, ta je totálně suchá, ale potřebujeme tady vyzvednout Mejlovu loď. Jestli to někdo jel už si ani nepamatuju... Cestou na trajekt řídím, nabíráme Mariku, na trajektu potkáváme partičku, co jsme potkali už na spatní u Sjoi. Na trajektu je docela párty, druhej den se probouzím až Drážďanech :)
+
+
+\akce{Letní Ötz}
+\datum[18.8. - 19.8.]
+
+S Michalem a Kubou na letním Ötzu. Já tu mám hlavně na vyzkoušení ředitele, abych se s nim před nepálem trochu sžil. Kluci tady pak zůstávaj, nabere je Pat se Slonem. Já se v neděli vracím, ještě vezu z Innsbrucku do Prahy nějaký 2 Poláky přes blablacar.
+
+\info[Venter]{18.8.}{90 $cm$ Vent}
+\usek{Horní}
+
+Na rozjetí, pohodička, rozumnej stav.
+
+\info[Venter]{18.8.}{112 $cm$ Vent}
+\usek{Spodní}
+
+Pohodovej stav.
+
+\info[Otztaler Ache]{18.8.}{220cm Tumpen}
+\usek{Lesní}
+
+Taky dobrý :)
+
+\info[Otztaler Ache]{18.8.}{230cm Tumpen}
+\usek{Köfels}
+
+Jedu to poprví a je to lepší, než bych čekal. Zábavnej úsek.
+
+\info[Otztaler Ache]{18.8.}{245cm Tumpen}
+\usek{Spodní}
+
+Na vypádlování.
+
+\info[Venter]{19.8.}{105 $cm$ Vent}
+\usek{Spodní}
+
+Na rozjetí.
+
+\info[Otztaler Ache]{18.8.}{205cm Tumpen}
+\usek{Mezimostí + Köefels}
+
+Michal je z toho trochu vyplašenej, protože jede mezimostí poprví :) Ale jedeme to relativně všechno v pohodě, žádný větší drama.
+
+\akce{Čerťáky}
+\datum[24.8. - 26.8.]
+
+\info[Vltava]{24.8.}{20 kubíků}
+\usek{Čerťáky}
+
+Rychlej podvečerní run na poslední vlak. Bez škvíry.
+
+\info[Vltava]{25.8.}{20 kubíků}
+\usek{Čerťáky}
+
+$4 \times$, dokonce se nechánm přemluvit a jedu $2\times$ ze shora.
+
+\info[Vltava]{26.8.}{20 kubíků}
+\usek{Čerťáky}
+
+2 jízdy a domu...
+
+
+\akce{Podzimní Ötz}
+\datum[28.9. - 30.9.]
+
+S Vojtou, Matesem a Makem.
+
+\info[Lech]{28.9.}{5 kubíků}
+\usek{Lech - Warth}
+
+Je to pekelně suchý, polovinu toho neseme, protože to nejde jet. Na začátku druhý soutěsky taháme Vojtu ze sifonu a pěšky se vracíme zpátky k mostu, už je moc pozdě na dojetí. Zlo...
+
+\info[Otztaler Ache]{29.9.}{180cm Tumpen}
+\usek{Mezimostí}
+
+Jedeme $2\times$.
+
+\info[Venter]{19.8.}{95 $cm$ Vent}
+\usek{Spodní}
+
+Jedeme večer a je to celkem dobrý.
+Mezimostí
+\info[Otztaler Ache]{30.9.}{180cm Tumpen}
+\usek{Wellerbrücke}
+
+V neděli dáváme jenom celý Wellerbrücke a jedem domu.
+
+
+\akce{Nepál}
+\datum[9.10. - 30.10.]
+
+
 
 
 \end{document}.
